# spinning_table_test

./: Dockerfile  README.md  docker-compose.yaml
src/lite6_pick_predictor/: package.xml  setup.cfg  setup.py
src/lite6_pick_predictor/launch/: pick_pipeline_kf.launch.py
src/lite6_pick_predictor/lite6_pick_predictor/: ign_obj_bridge.py  kalman_predictor.py  moveit_bridge_action.py
src/my_simulation/: package.xml  setup.py
src/my_simulation/config/: lite6_controllers.yaml
src/my_simulation/launch/: profile.launch.py  robot_description.launch.py  start_simulation_environment.launch.py
src/my_simulation/my_simulation/: Simulation_Node.py
src/my_simulation/objects/meshes/: 2020_alu_profile.stl  4040_alu_profile.stl
src/my_simulation/objects/urdf/: F20_20_B.urdf  F40_40_B.urdf
src/my_simulation/robot/: lite_gripper.urdf.xacro  xarm_device.urdf.xacro  xarm_device_macro.xacro
src/my_simulation/scripts/: apply_force.py  pick_and_place.py  pose_predictor.py  urdf_publisher.py
src/my_simulation/worlds/: custom_empty.sdf
src/tp_control_cpp/: CMakeLists.txt  package.xml
src/tp_control_cpp/config/: params.yaml
src/tp_control_cpp/include/tp_control_cpp/: trajectory_utils.hpp
src/tp_control_cpp/launch/: timing_demo.launch.py
src/tp_control_cpp/src/: tp_control_cpp.cpp
